feris de limatambo

--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "flowbite-react": "^0.10.1",
+    "photoswipe": "^5.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-photoswipe-gallery": "^3.0.2",
     "react-router-dom": "^6.24.1"
   },
   "devDependencies": {
